Improve css of detail page

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,4 +1,7 @@
 @import './resets';
 @import './base';
+@import './breadcrumb';
 @import './layout';
+@import './loader';
 @import './weather-list';
+@import './weather';
