--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -4,7 +4,9 @@ body {
     font-family: Roboto;
     background: #f5f5f5;
 }
-
+a{
+    color:#009688
+}
 @-webkit-keyframes spin {
     0% {
         -webkit-transform: rotate(0deg);
