--- a/src/assets/_weather-list.scss
+++ b/src/assets/_weather-list.scss
@@ -6,7 +6,7 @@ $item-header-country-font-color: #fff;
 
 .weather-list-wrapper {
   display: flex;
-  margin: 0 -0.5rem;
+  margin: 0 -0.5rem 2rem;
   flex-wrap: wrap;
 }
 
@@ -98,28 +98,4 @@ $item-header-country-font-color: #fff;
 }
 .weather-list-item-body-item-info-value {
   font-weight: 400;
-}
-
-@media (min-width: 480px) {
-  .weather-list-item {
-    width: calc(50% - 1rem);
-  }
-}
-
-@media (min-width: 768px) {
-  .weather-list-item {
-    width: calc(33.3333% - 1rem);
-  }
-}
-
-@media (min-width: 992px) {
-  .weather-list-item {
-    width: calc(25% - 1rem);
-  }
-}
-
-@media (min-width: 1200px) {
-  .weather-list-item {
-    width: calc(20% - 1rem);
-  }
 }
