--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -64,7 +64,8 @@ a{
     color: #777;
     font-weight: 300;
     position: fixed;
-    bottom: 1rem;
+    bottom: 0.3rem;
     left: 50%;
     transform: translateX(-50%);
+    font-size: 0.8rem;
 }
