--- a/src/assets/_weather.scss
+++ b/src/assets/_weather.scss
@@ -31,7 +31,7 @@ $weather-bg-color: #313131;
   padding: 1rem;
 }
 
-.weather-detail-info-temp{
+.weather-detail-info-temp {
   font-size: 5rem;
   color: #009688;
   margin-bottom: 1rem;
@@ -57,14 +57,13 @@ $weather-bg-color: #313131;
   flex-wrap: wrap;
 }
 
-.weather-detail-primary-today{
+.weather-detail-primary-today {
   text-align: left;
-    font-size: 1.5rem;
-    font-weight: 200;
-    color: #fff;
-    text-align: center;
+  font-size: 1.5rem;
+  font-weight: 200;
+  color: #fff;
+  text-align: center;
 }
-
 
 .weather-detail-primary-img {
   margin-top: -1rem;
@@ -74,6 +73,9 @@ $weather-bg-color: #313131;
   font-size: 2rem;
   font-weight: 200;
   margin-top: -1rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .weather-detail-days-item {
@@ -99,7 +101,6 @@ $weather-bg-color: #313131;
   font-weight: 100;
 }
 
-
 .weather-detail-days-item-img {
   margin: -1rem 0;
 }
@@ -114,7 +115,6 @@ $weather-bg-color: #313131;
   margin: 1rem 0 0.5rem;
   color: #333;
 }
-
 
 .weather-detail-body-items {
   display: flex;
