add city to state

--- a/src/assets/_weather-list.scss
+++ b/src/assets/_weather-list.scss
@@ -90,6 +90,7 @@ $item-header-country-font-color: #fff;
   display: flex;
   flex-direction: column;
   margin-left: 0.4rem;
+  color:#333;
 }
 .weather-list-item-body-item-info-name {
   color: #777;
