--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -1,40 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400;1,500&display=swap");
+$base-color: #009688;
 
 body {
     font-family: Roboto;
     background: #f5f5f5;
 }
-a{
-    color:#009688
-}
-@-webkit-keyframes spin {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
-}
-@keyframes spin {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
-}
 
-.view-more-btn {
-    background: #fff;
-    border: 1px solid #ddd;
-    padding: 0.5rem 1rem;
-    border-radius: 0.2rem;
-    min-width: 7rem;
-    text-align: center;
+a {
+    color: $base-color;
 }
 
 ::-webkit-scrollbar {
@@ -59,7 +32,7 @@ a{
     color: #555;
 }
 
-.footer{
+.footer {
     text-align: center;
     color: #777;
     font-weight: 300;
