--- a/src/assets/_favorite-city.scss
+++ b/src/assets/_favorite-city.scss
@@ -1,6 +1,88 @@
 .favorite-city {
-  padding: 1rem;
-  background: #313131;
-  border-radius: 1rem;
+  background: $base-color;
+  border-radius: 0.5rem;
   margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+}
+
+.favorite-city-primary-img-box {
+  width: 30%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.favorite-city-primary {
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.favorite-city-primary-name {
+  font-weight: 200;
+  color: #fff;
+  font-size: 1.2rem;
+}
+
+.favorite-city-primary-country {
+  display: inline-flex;
+  padding: 0.1rem 0.3rem;
+  border-radius: 0.4rem;
+  font-size: 0.7rem;
+  margin-right: 0.5rem;
+  background: #48484a;
+  color: #fff;
+}
+
+.favorite-city-primary-temp {
+  font-size: 2rem;
+  font-weight: 200;
+  color: #fff;
+  text-align: center;
+}
+.favorite-city-days {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.favorite-city-days-item {
+  width: 33.333%;
+  display: flex;
+  color: #f5f5f5;
+  align-items: center;
+  font-weight: 400;
+}
+
+.favorite-city-days-item-info-temp {
+  display: inline-flex;
+  margin-right: 0.3rem;
+  &.green {
+    color: green;
+  }
+  &.red {
+    color: red;
+  }
+}
+
+.favorite-city-remove {
+  cursor: pointer;
+  color: #f44336;
+  border: 1px solid #f44336;
+  width: 1.5rem;
+  height: 1.5rem;
+  font-size: 1.6rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  &:hover {
+    background: #f44336;
+    color: #fff;
+  }
 }
